Fixed gradient overflow

--- a/public/assets/style.bundle.css
+++ b/public/assets/style.bundle.css
@@ -142,7 +142,7 @@ a {
 
 #canvas-gradient {
   display: block;
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   top: 0;
